# PyMicrofluidics

./: .gitignore  HowTo.ipynb  LICENSE  MoM_3layers.ipynb  MoM_3layers_class.ipynb  PyMicrofluidics_class_example.ipynb  PyMicrofluidics_minimalistic.ipynb  README.md  microfluidics.py  microfluidics_class.py  microfluidics_plotting.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
pymicrofluidics/: setup.py
pymicrofluidics/pymicrofluidics/: __init__.py  mfdesign.py
src/data/: hershey.txt
src/pymicrofluidics/: __init__.py  mfdesign.py  mfplotting.py
tests/: test_design.py  test_features.py
